fix：wrong color a：hover

--- a/static/css/main.css
+++ b/static/css/main.css
@@ -166,7 +166,7 @@ a {
 }
 
 a:hover {
-  background-color: #8e7b8b;
+  background-color: #d7bed2b3;
 }
 
 img {
